--- a/src/main/java/task/ui/MainScreen.form
+++ b/src/main/java/task/ui/MainScreen.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="20" y="20" width="626" height="400"/>
+      <xy x="20" y="20" width="707" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -45,7 +45,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <grid id="f6b18" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f6b18" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -63,7 +63,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="bfca8" class="javax.swing.JComboBox" binding="clearanceLevelDropdown">
+          <component id="bfca8" class="javax.swing.JComboBox" binding="accessLevelDropdown">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -107,6 +107,14 @@
             </constraints>
             <properties>
               <text value="Уровень доступа:"/>
+            </properties>
+          </component>
+          <component id="5adb1" class="javax.swing.JButton" binding="resetFiltersButton">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Сбросить"/>
             </properties>
           </component>
         </children>
